Add moveMonster and updateMonsterPositions methods